# caja-mycomputer

./: README.md  meson.build
po/: POTFILES  meson.build  zh_CN.po
src/: caja-my-computer.c  caja-my-computer.h  libcaja-my-computer.desktop.in  meson.build  my-computer.c
